--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
     <title>mine-sweeper</title>
-    <div ><button onclick="initGame()" class="new-game">new game</button></div>
+    <div ><button onclick="newGame()" class="new-game">new game</button></div>
     <h3>choose your difficulty</h3>
     <div>
         <button onclick="changeToEasy()" class="upper-buttons">  Easy (16) </button>
