fixed bugs and improved by little

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>mine-sweeper</title>
     <div ><button onclick="newGame()" class="new-game">new game</button></div>
     <h3>choose your difficulty</h3>
+    
     <div>
+        
         <button onclick="changeToEasy()" class="upper-buttons">  Easy (16) </button>
         <button onclick="changeToMedium()" class="upper-buttons"> Medium (64) </button>
         <button onclick="changeToHard()" class="upper-buttons"> Hard (144) </button>
@@ -23,7 +25,9 @@
     </div>
 
     <div class="nums" id="table"></div>
+    <div class="lives"> Live's left - </div>
     <div class="game-status"></div>
+    <div class="smiley"></div>
 
 
     <script src="js/utils.js"></script>
